# regex-genex

./: .gitignore  Main.hs  Makefile  README  Setup.lhs  genex.cabal  genex.hs  regex-genex.cabal  tags
src/Regex/: Genex.hs
src/Regex/Genex/: Normalize.hs  Pure.hs
