Name            : regex-genex
Version         : 0.2.1
license         : OtherLicense
license-file    : LICENSE
cabal-version   : >= 1.6
copyright       : 2011 Audrey Tang
maintainer      : Audrey Tang <audreyt@audreyt.org>
category        : Text, Regex
stability       : experimental
build-type      : Simple
homepage        : https://github.com/audreyt/regex-genex
synopsis        : From a regex, generate all possible strings it can match
description     : From a regex, generate all possible strings it can match
author          : Audrey Tang <audreyt@audreyt.org>
Tested-With:    GHC==7.0.2

library
    hs-source-dirs:     . src
    exposed-modules:    Regex.Genex Regex.Genex.Normalize
    extensions      : ImplicitParams, NamedFieldPuns, ParallelListComp, PatternGuards
    build-depends:
        base >= 3 && < 5, haskell98, mtl, containers, sbv, regex-tdfa

executable genex
    main-is:            Main.hs
    hs-source-dirs:     . src
    extensions      : ImplicitParams, NamedFieldPuns, ParallelListComp, PatternGuards
    build-depends:
        base >= 3 && < 5, haskell98, mtl, containers, sbv, regex-tdfa

source-repository head
  type:     git
  location: http://github.com/audreyt/regex-genex
